# piga

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_pigaco.md  distributor.py
Data/Config/: wt_config.xml  wthttpd.conf
Data/forms/: GameBox.qml  MainMenu.qml  MainMenuHeader.qml
Data/forms/Pages/Settings/: Main.qml  PlayerDelegate.qml  Players.qml
Data/forms/Pages/Store/: Colors.qml  Main.qml
PineServer/: server.py
cmake/: FindSDL2image.cmake  FindSDL2ttf.cmake
console/model/: buttons.scad  controls.scad  threads.scad
consolemgr/: CMakeLists.txt
consolemgr/forms/: ClientView.qml  MainView.qml  NewConnection.qml
consolemgr/include/: Client.hpp  ClientManager.hpp  Player.hpp
consolemgr/src/: Client.cpp  ClientManager.cpp  Player.cpp  main.cpp
docs/: Doxyfile  mainpage.dox
docs/pages/: page1_overall_architecture.md  page2_interface_hosting_mode.md  page3_event_system.md  page4_inputs.md
hosts/: CMakeLists.txt  host.h
hosts/pc_keyboard/: CMakeLists.txt
hosts/pc_keyboard/src/: host.cpp
hosts/raspberrypi_gpio/: CMakeLists.txt
hosts/raspberrypi_gpio/src/: host.cpp
include/pigaco/: App.hpp  Config.hpp  DirectoryScanner.hpp  Game.hpp  GameBox.hpp  GameChooser.hpp  GameHostStarter.hpp  Players.hpp  WebAdmin.hpp  WebGames.hpp  WebInputs.hpp  WebNavigationBar.hpp  WebPlayers.hpp  Window.hpp
include/pigaco/packaging/: Package.hpp  PackageManager.hpp  Version.hpp
libpiga/: CMakeLists.txt
libpiga/examples/: CMakeLists.txt  Example.hpp  interface.cpp
libpiga/include/piga/: Definitions.hpp  GameControl.hpp  GameEvent.hpp  GameEventHandler.hpp  GameHost.hpp  GameInput.hpp  GameInputEvent.hpp  Host.hpp  InputMethod.hpp  Interface.hpp  Player.hpp  PlayerInput.hpp  PlayerManager.hpp  Renderer.hpp  SharedLibWrapper.hpp  Status.hpp
libpiga/include/piga/Events/: GameInput.hpp  PlayerAdded.hpp  PlayerRemoved.hpp  TextInput.hpp
libpiga/src/: GameControl.cpp  GameEvent.cpp  GameEventHandler.cpp  GameHost.cpp  GameInput.cpp  GameInputEvent.cpp  Host.cpp  InputMethod.cpp  Interface.cpp  Player.cpp  PlayerInput.cpp  PlayerManager.cpp  Renderer.cpp  SharedLibWrapper.cpp  Status.cpp
libpiga/src/Events/: GameInput.cpp  PlayerAdded.cpp  PlayerRemoved.cpp  TextInput.cpp
networked_client/: CMakeLists.txt
networked_client/include/: Application.hpp  Client.hpp
networked_client/include/NetworkedClient/: Application.hpp  Client.hpp  PlayerManager.hpp
networked_client/src/: Application.cpp  Client.cpp  PlayerManager.cpp
pihud/: .gitignore  CMakeLists.txt
pihud/.kdev4/: pihud.kdev4
pihud/include/pihud/: Config.hpp  Direction.hpp  DirectionEvent.hpp  Event.hpp  FocusEvent.hpp  FocusManager.hpp  Font.hpp  FontManager.hpp  HealthAndNameDisplay.hpp  HorizontalListLayout.hpp  HudContainer.hpp  IconHealthIndicator.hpp  Image.hpp  InputEvent.hpp  Label.hpp  Layout.hpp  Layouter.hpp  MenuContainer.hpp  Particle.hpp  ParticleSource.hpp  PigaEvent.hpp  Pihud.hpp  PushButton.hpp  QueueDisplayWidget.hpp  Rect.hpp  Texture.hpp  TextureManager.hpp  VerticalListLayout.hpp  WeHaveAWinnerWidget.hpp  Widget.hpp  pihud.hpp
pihud/src/: Config.cpp  DirectionEvent.cpp  Event.cpp  FocusEvent.cpp  FocusManager.cpp  Font.cpp  FontManager.cpp  HealthAndNameDisplay.cpp  HorizontalListLayout.cpp  HudContainer.cpp  IconHealthIndicator.cpp  Image.cpp  InputEvent.cpp  Label.cpp  Layout.cpp  Layouter.cpp  MenuContainer.cpp  Particle.cpp  ParticleSource.cpp  PigaEvent.cpp  PushButton.cpp  QueueDisplayWidget.cpp  Rect.cpp  Texture.cpp  TextureManager.cpp  VerticalListLayout.cpp  WeHaveAWinnerWidget.cpp  Widget.cpp  pihud.cpp
schemas/: gamecontrol.proto  input.proto  libpiga_handshake.proto  login.proto  player.proto
src/: App.cpp  DirectoryScanner.cpp  Game.cpp  GameBox.cpp  GameChooser.cpp  GameHostStarter.cpp  Players.cpp  WebAdmin.cpp  WebGames.cpp  WebInputs.cpp  WebNavigationBar.cpp  WebPlayers.cpp  Window.cpp
src/packaging/: Package.cpp  PackageManager.cpp  Version.cpp
